# centinelas-pr

./: .env.example  .gitignore  .semgrepignore  Makefile.offline  PRII-CENTINELAS.sh  README.md  activation-matrix.yaml  dependency-graph.yaml  federation.json  pyproject.toml  skill-registry.yaml
.github/workflows/: desktop-build.yml  dispatch-signals-aguayluz.yml  dispatch-signals-ovnis.yml  dispatch-signals.yml  maintenance.yml  semgrep.yml  skills-validation.yml  template-drift.yml  validate.yml
PRII-CENTINELAS.app/Contents/: Info.plist
PRII-CENTINELAS.app/Contents/MacOS/: PRII-CENTINELAS
PRII-CENTINELAS.app/Contents/Resources/: AppIcon.icns
config/: settings.yaml
data/reference/: pr_natural_features_resolver.json  source_registry.csv
data/routing/: routing_policy.yaml  thehub_run_logging_contract.yaml
data/signals/: example_signals.jsonl  live_signals.jsonl
data/source_health/: p0_source_health_ledger.yaml
data/source_universe/: non_municipal_source_universe_ledger.yaml  p0_source_queue.yaml
desktop/: README.md  app_server.py  config.py  launch.py  pyinstaller.spec  seed.py  setup.py
docs/: PR_OPEN_WEB_DISCOVERY_IMPLEMENTATION_PLAN.md  PR_SPATIAL_GRID.md  ROAD_TO_100.md  UI_CLEANUP_OPTIMIZATION_PLAN.md  UI_CLEANUP_PLAN.md
docs/adr/: 0002-pr-open-web-discovery-architecture.md
docs/source_universe/: p0_source_health_run.md
frontend/: AGENTS.md  README.md  index.html  jsconfig.json  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/docs/: CENTINELAS_BASE44_DEPENDENCY_REMOVAL_v1.md  CENTINELAS_LIFECYCLE_PATCH_VERIFY_AND_DEPLOY_v1.md  CENTINELAS_MONEYSWEEP_LIFECYCLE_EXECUTION.md  checks.json
frontend/schemas/: BASE44_MIGRATION_NOTE.md
frontend/schemas/entities/: AlertEvent.schema.json  AlertRule.schema.json  Author.schema.json  Beat.schema.json  Comment.schema.json  CoverageGap.schema.json  EditorialNote.schema.json  Entity.schema.json  EntityMention.schema.json  Evidence.schema.json  HandoffCandidate.schema.json  Law.schema.json  Matter.schema.json  Municipality.schema.json  OfficialRecord.schema.json  Signal.schema.json  Source.schema.json  Story.schema.json  Subscription.schema.json  Vote.schema.json  Watchlist.schema.json
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/api/: appClient.js  pipelineClient.js
frontend/src/components/: Footer.jsx  Header.jsx  Layout.jsx  ListState.jsx  ProtectedRoute.jsx  UserNotRegisteredError.jsx
frontend/src/data/: seedData.js
frontend/src/lib/: AuthContext.jsx  LanguageContext.jsx  PageNotFound.jsx  ThemeContext.jsx  app-params.js  appQuery.js  lifecycle.js
frontend/src/pages/: AuthorDetail.jsx  Authors.jsx  Entities.jsx  EntityDetail.jsx  ForgotPassword.jsx  Handoff.jsx  Home.jsx  LawDetail.jsx  LawTable.jsx  Login.jsx  MatterDetail.jsx  Matters.jsx  Monitor.jsx  Pipeline.jsx  PipelineItemDetail.jsx  Profile.jsx  Register.jsx  ResetPassword.jsx  Signals.jsx  SignalsTable.jsx  Sources.jsx
maintenance/: __init__.py
maintenance/adapters/: __init__.py  local.py
schemas/: centinelas_item.schema.json  open_web_discovery.schema.json  prii_skill_contract.schema.json  signal.schema.json
scripts/: build_signal_ledger.py  emit_dispatches.py  federation_export.py  run_maintenance.py  run_offline_operator.sh  validate_pr_grid.py  validate_skills.py
server/backend/: main.py
skills/prii-check-producer-contract/: SKILL.md
src/centinelas/: __init__.py  cli.py  models.py  natural_features.py
src/centinelas/classify/: classifier.py  (+3 more)
tests/: test_build_signal_ledger.py  test_classifier.py  test_cli_run.py  test_desktop_app_server.py  test_desktop_seed.py  test_dispatch.py  test_emit_dispatches.py  test_enrich.py  test_federation_contract_compat.py  test_federation_export.py  test_maintenance.py  test_natural_features.py  test_router.py  test_run_endpoint.py  test_safety_compliance.py  test_source_universe_ledgers.py  test_urgency.py  test_water_taxonomy.py
tests/fixtures/: sample_items.json
tests/skill_contract/: test_skill_packet.py
(+29 files in other folders)
