[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "centinelas"
version = "0.1.0"
description = "Universal online intelligence monitor and routing engine"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.40.0",
    "httpx>=0.27.0",
    "feedparser>=6.0.0",
    "beautifulsoup4>=4.12.0",
    "pydantic>=2.6.0",
    "pyyaml>=6.0.0",
    "jsonschema>=4.21.0",
    "typer>=0.12.0",
    "rich>=13.7.0",
    "prii-export-utils @ git+https://github.com/jotaele44/thehub-pr.git@c007a728910128efebcda79bdbe6b9b33212551e#subdirectory=packages/prii_export_utils",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-httpx>=0.30.0",
    "ruff>=0.4.0",
]
server = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
]

[project.scripts]
centinelas = "centinelas.cli:app"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/centinelas"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
