[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "centinelas"
version = "0.1.0"
description = "Universal online intelligence monitor and routing engine"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.40.0",
    "httpx>=0.27.0",
    "feedparser>=6.0.0",
    "beautifulsoup4>=4.12.0",
    "pydantic>=2.6.0",
    "pyyaml>=6.0.0",
    "jsonschema>=4.21.0",
    "typer>=0.12.0",
    "rich>=13.7.0",
    # Shared federation libraries, resolved via a local path source (see
    # [tool.uv.sources]) instead of a pinned git SHA — edit-once, no per-repo bump.
    # Requires thehub-pr checked out as a sibling of this repo.
    "prii-maintenance",
    "prii-export-utils",
]

[tool.uv.sources]
# Editable local path sources for the shared federation libraries (thehub-pr is
# always a sibling checkout, locally and in CI).
prii-maintenance = { path = "../thehub-pr/packages/prii_maintenance", editable = true }
prii-export-utils = { path = "../thehub-pr/packages/prii_export_utils", editable = true }

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-httpx>=0.30.0",
    "ruff>=0.4.0",
]
server = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
]

[project.scripts]
centinelas = "centinelas.cli:app"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/centinelas"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
